# Multi-agent-research-assistant

./: .gitignore  README.md  WORKFLOW_AND_INTERVIEW_PREP.md  api.py  app_ui.py  db.py  graph.py  ingest.py  main.py  prompts.py  pyproject.toml  requirements.txt  state.py
agents/: analyst.py  orchestrator.py  researcher.py  writer.py
tools/: rag.py  search.py
